--- a/index.html
+++ b/index.html
@@ -415,8 +415,14 @@
 	<!-- //футер  -->
 
 	<!-- Модальное окно  -->
-	<div class="backdrop is-hidden" data-modal>
-		<div class="modal"><button data-modal-close>X</button></div>
+	<!-- не забыть вернуть class="backdrop is-hidden" в бэкдроп -->
+	<div class="backdrop" data-modal>
+		<div class="modal"><button data-modal-close>X</button>
+			<form class="modal-form" action="">
+				<input type="text" name="user-name" required>
+				<input type="tel" name="user-phone" required>
+			</form>
+		</div>
 	</div>
 	<script src="./js/modal.js"></script>
 
