--- a/index.html
+++ b/index.html
@@ -418,36 +418,41 @@
 	<!-- не забыть вернуть class="backdrop is-hidden" в бэкдроп -->
 	<div class="backdrop" data-modal>
 		<div class="modal">
-			<button class="modal-close-button" data-modal-close>x</button>
+			<button class="modal-close-button" data-modal-close>
+				<svg class="modal-close-button-icon" width="18" height="18" viewBox="0 0 18 18" fill="none"
+					xmlns="http://www.w3.org/2000/svg">
+					<path
+						d="M15 4.10786L13.8921 3L9.5 7.39214L5.10786 3L4 4.10786L8.39214 8.5L4 12.8921L5.10786 14L9.5 9.60786L13.8921 14L15 12.8921L10.6079 8.5L15 4.10786Z"
+						fill="black" />
+				</svg>
+			</button>
 			<form class="form" action="" autocomplete="off">
-				<b>Оставьте свои данные, мы вам перезвоним</b>
+				<h3>Оставьте свои данные, мы вам перезвоним</h3>
 
 				<label class="form-field">
 					<span class="form-label">Имя</span>
-					<input type="text" class="form-input" name="user-name" required>
 					<span class="input-wrapper">
+						<input type="text" class="form-input" name="user-name" required>
 						<svg class="icon">
 							<use href='./img/symbol-defs.svg#icon-person-black-18dp'></use>
 						</svg>
 					</span>
 				</label>
 
-
 				<label class="form-field">
 					<span class="form-label">Телефон</span>
-					<input type="tel" class="form-input" name="user-phone" required placeholder="">
 					<span class="input-wrapper">
+						<input type="tel" class="form-input" name="user-phone" required placeholder="">
 						<svg class="icon">
 							<use href='./img/symbol-defs.svg#icon-phone-black-18dp'></use>
 						</svg>
 					</span>
 				</label>
 
-
 				<label class="form-field">
 					<span class="form-label">Почта</span>
-					<input type="email" class="form-input" name="user-email">
 					<span class="input-wrapper">
+						<input type="email" class="form-input" name="user-email">
 						<svg class="icon">
 							<use href='./img/symbol-defs.svg#icon-email-black-18dp'></use>
 						</svg>
@@ -456,11 +461,11 @@
 
 				<label class="form-field">
 					<span class="form-label">Комментарий</span>
-					<input type="text" class="form-textarea" placeholder="Введите текст">
+					<input type="text" name="user-message" class="form-textarea" placeholder="Введите текст">
 				</label>
 
 				<label class="checkbox">
-					<input type="checkbox" name="" value="accepted">
+					<input type="checkbox" name="" value="accepted" required>
 					<span class="agreement">Соглашаюсь с рассылкой и принимаю<a href="">&nbsp;Условия
 							договора</a></span>
 				</label>
