--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
 
 	<!-- Модальное окно  -->
 	<!-- не забыть вернуть class="backdrop is-hidden" в бэкдроп -->
-	<div class="backdrop" data-modal>
+	<div class="backdrop is-hidden" data-modal>
 		<div class="modal">
 			<button class="modal-close-button" data-modal-close>
 				<svg class="modal-close-button-icon" width="18" height="18" viewBox="0 0 18 18" fill="none"
@@ -465,19 +465,9 @@
 				</label>
 
 				<label class="checkbox">
-					<input type="checkbox" class="checkbox-input" name="" value="accepted" required>
+					<input type="checkbox" class="visually-hidden " name="agreement" value="accepted" required>
 					<span class="agreement">
-						<span>
-							<svg class="custom-checkbox" width="16" height="15" viewBox="0 0 16 15" fill="none"
-								xmlns="http://www.w3.org/2000/svg">
-								<rect width="16" height="15" rx="2" fill="" />
-								<path
-									d="M3.95703 7.75166L3.88825 7.68604L3.81923 7.75141L2.93123 8.59258L2.85486 8.66492L2.93097 8.73753L6.42671 12.0724L6.49574 12.1382L6.56476 12.0724L14.069 4.91352L14.1449 4.84116L14.069 4.76881L13.1873 3.92764L13.1183 3.86183L13.0493 3.92761L6.49577 10.1735L3.95703 7.75166Z"
-									fill="white" stroke="white" stroke-width="0.2" />
-							</svg>
-						</span>
-						Соглашаюсь с рассылкой и принимаю
-						<a href="">&nbsp;Условия договора</a>
+						Соглашаюсь с рассылкой и принимаю<a href="">&nbsp;Условия договора</a>
 					</span>
 				</label>
 
