--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
 				</label>
 
 				<label class="checkbox">
-					<input type="checkbox" class="visually-hidden " name="agreement" value="accepted" required>
+					<input type="checkbox" class="modal-checkbox-input" name="agreement" value="accepted" required>
 					<span class="agreement">
 						Соглашаюсь с рассылкой и принимаю<a href="">&nbsp;Условия договора</a>
 					</span>
