--- a/index.html
+++ b/index.html
@@ -425,42 +425,38 @@
 						d="M15 4.10786L13.8921 3L9.5 7.39214L5.10786 3L4 4.10786L8.39214 8.5L4 12.8921L5.10786 14L9.5 9.60786L13.8921 14L15 12.8921L10.6079 8.5L15 4.10786Z" />
 				</svg>
 			</button>
-			<form class="form" action="" autocomplete="off">
+			<form class="form" action="GET" autocomplete="off">
 				<h3>Оставьте свои данные, мы вам перезвоним</h3>
 
-				<label class="form-field">
-					<span class="form-label">Имя</span>
+				<label class="form-label">Имя
 					<span class="input-wrapper">
-						<input type="text" class="form-input" name="user-name" required>
-						<svg class="icon">
+						<input class="form-input" type="text" name="user-name" required>
+						<svg class="modal-icon">
 							<use href='./img/symbol-defs.svg#icon-person-black-18dp'></use>
 						</svg>
 					</span>
 				</label>
 
-				<label class="form-field">
-					<span class="form-label">Телефон</span>
+				<label class="form-label">Телефон
 					<span class="input-wrapper">
-						<input type="tel" class="form-input" name="user-phone" required placeholder="">
-						<svg class="icon">
+						<input class="form-input" type="tel" name="user-phone" required>
+						<svg class="modal-icon">
 							<use href='./img/symbol-defs.svg#icon-phone-black-18dp'></use>
 						</svg>
 					</span>
 				</label>
 
-				<label class="form-field">
-					<span class="form-label">Почта</span>
+				<label class="form-label">Почта
 					<span class="input-wrapper">
-						<input type="email" class="form-input" name="user-email">
-						<svg class="icon">
+						<input class="form-input" type="email" name="user-email">
+						<svg class="modal-icon">
 							<use href='./img/symbol-defs.svg#icon-email-black-18dp'></use>
 						</svg>
 					</span>
 				</label>
 
-				<label class="form-field">
-					<span class="form-label">Комментарий</span>
-					<input type="text" name="user-message" class="form-textarea" placeholder="Введите текст">
+				<label class="form-label label-textarea">Комментарий
+					<input class="form-textarea" type="text" name="user-message" placeholder="Введите текст">
 				</label>
 
 				<label class="checkbox">
