--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
 				</label>
 
 				<label class="form-label label-textarea">Комментарий
-					<input class="form-textarea" type="text" name="user-message" placeholder="Введите текст">
+					<textarea class="form-textarea" name="user-message" placeholder="Введите текст"></textarea>
 				</label>
 
 				<label class="checkbox">
