По замечаниям ментора
Сделал форму в футере,
добаил opacity на кнопки форм

--- a/index.html
+++ b/index.html
@@ -141,8 +141,6 @@
 							<h3>Дизайнерские решения</h3>
 						</div>
 					</div>
-
-
 				</li>
 			</ul>
 		</div>
@@ -378,37 +376,49 @@
 				</ul>
 			</div>
 			<div class="right-side">
-				<h3>Присоединяйтесь</h3>
-				<ul class="footer-socialnet-list">
-					<li>
-						<a class="footer-socialnet-link" href="">
-							<svg class="socialnet-icon">
-								<use href="./img/symbol-defs.svg#icon-instagram"></use>
-							</svg>
-						</a>
-					</li>
-					<li>
-						<a class="footer-socialnet-link" href="">
-							<svg class="socialnet-icon">
-								<use href="./img/symbol-defs.svg#icon-twitter"></use>
-							</svg>
-						</a>
-					</li>
-					<li>
-						<a class="footer-socialnet-link" href="">
-							<svg class="socialnet-icon">
-								<use href="./img/symbol-defs.svg#icon-facebook"></use>
-							</svg>
-						</a>
-					</li>
-					<li>
-						<a class="footer-socialnet-link" href="">
-							<svg class="socialnet-icon">
-								<use href="./img/symbol-defs.svg#icon-linkedin"></use>
-							</svg>
-						</a>
-					</li>
-				</ul>
+				<div class="footer-block-socialnet">
+					<h3>Присоединяйтесь</h3>
+					<ul class="footer-socialnet-list">
+						<li>
+							<a class="footer-socialnet-link" href="">
+								<svg class="socialnet-icon">
+									<use href="./img/symbol-defs.svg#icon-instagram"></use>
+								</svg>
+							</a>
+						</li>
+						<li>
+							<a class="footer-socialnet-link" href="">
+								<svg class="socialnet-icon">
+									<use href="./img/symbol-defs.svg#icon-twitter"></use>
+								</svg>
+							</a>
+						</li>
+						<li>
+							<a class="footer-socialnet-link" href="">
+								<svg class="socialnet-icon">
+									<use href="./img/symbol-defs.svg#icon-facebook"></use>
+								</svg>
+							</a>
+						</li>
+						<li>
+							<a class="footer-socialnet-link" href="">
+								<svg class="socialnet-icon">
+									<use href="./img/symbol-defs.svg#icon-linkedin"></use>
+								</svg>
+							</a>
+						</li>
+					</ul>
+				</div>
+
+
+				<form action="">
+					<h3>Подпишитесь на рассылку</h3>
+					<label class="form-footer-label">
+						<input class="form-footer-input" type="email" name="user-email" placeholder="E-mail">
+					</label>
+					<button class="footer-submit-button" type="submit">Подписаться</button>
+				</form>
+
 			</div>
 		</div>
 	</footer>
