--- a/portfolio.html
+++ b/portfolio.html
@@ -239,7 +239,6 @@
 	</section>
 	<!-- //секция  кнопок и карточек -->
 
-
 	<!-- футер  -->
 	<footer class="footer">
 		<div class="container">
@@ -259,40 +258,113 @@
 				</ul>
 			</div>
 			<div class="right-side">
-				<h3>Присоединяйтесь</h3>
-				<ul class="footer-socialnet-list">
-					<li>
-						<a class="footer-socialnet-link" href="">
-							<svg class="socialnet-icon">
-								<use href="./img/symbol-defs.svg#icon-instagram"></use>
-							</svg>
-						</a>
-					</li>
-					<li>
-						<a class="footer-socialnet-link" href="">
-							<svg class="socialnet-icon">
-								<use href="./img/symbol-defs.svg#icon-twitter"></use>
-							</svg>
-						</a>
-					</li>
-					<li>
-						<a class="footer-socialnet-link" href="">
-							<svg class="socialnet-icon">
-								<use href="./img/symbol-defs.svg#icon-facebook"></use>
-							</svg>
-						</a>
-					</li>
-					<li>
-						<a class="footer-socialnet-link" href="">
-							<svg class="socialnet-icon">
-								<use href="./img/symbol-defs.svg#icon-linkedin"></use>
-							</svg>
-						</a>
-					</li>
-				</ul>
+				<div class="footer-block-socialnet">
+					<h3>Присоединяйтесь</h3>
+					<ul class="footer-socialnet-list">
+						<li>
+							<a class="footer-socialnet-link" href="">
+								<svg class="socialnet-icon">
+									<use href="./img/symbol-defs.svg#icon-instagram"></use>
+								</svg>
+							</a>
+						</li>
+						<li>
+							<a class="footer-socialnet-link" href="">
+								<svg class="socialnet-icon">
+									<use href="./img/symbol-defs.svg#icon-twitter"></use>
+								</svg>
+							</a>
+						</li>
+						<li>
+							<a class="footer-socialnet-link" href="">
+								<svg class="socialnet-icon">
+									<use href="./img/symbol-defs.svg#icon-facebook"></use>
+								</svg>
+							</a>
+						</li>
+						<li>
+							<a class="footer-socialnet-link" href="">
+								<svg class="socialnet-icon">
+									<use href="./img/symbol-defs.svg#icon-linkedin"></use>
+								</svg>
+							</a>
+						</li>
+					</ul>
+				</div>
+
+
+				<form action="">
+					<h3>Подпишитесь на рассылку</h3>
+					<label class="form-footer-label">
+						<input class="form-footer-input" type="email" name="user-email" placeholder="E-mail">
+					</label>
+					<button class="footer-submit-button" type="submit">Подписаться</button>
+				</form>
+
 			</div>
 		</div>
 	</footer>
+	<!-- //футер  -->
+
+	<!-- Модальное окно  -->
+	<!-- не забыть вернуть class="backdrop is-hidden" в бэкдроп -->
+	<div class="backdrop is-hidden" data-modal>
+		<div class="modal">
+			<button class="modal-close-button" data-modal-close>
+				<svg class="modal-close-button-icon" width="18" height="18" viewBox="0 0 18 18" fill="none"
+					xmlns="http://www.w3.org/2000/svg">
+					<path
+						d="M15 4.10786L13.8921 3L9.5 7.39214L5.10786 3L4 4.10786L8.39214 8.5L4 12.8921L5.10786 14L9.5 9.60786L13.8921 14L15 12.8921L10.6079 8.5L15 4.10786Z" />
+				</svg>
+			</button>
+			<form class="form" action="GET" autocomplete="off">
+				<h3>Оставьте свои данные, мы вам перезвоним</h3>
+
+				<label class="form-label">Имя
+					<span class="input-wrapper">
+						<input class="form-input" type="text" name="user-name" required>
+						<svg class="modal-icon">
+							<use href='./img/symbol-defs.svg#icon-person-black-18dp'></use>
+						</svg>
+					</span>
+				</label>
+
+				<label class="form-label">Телефон
+					<span class="input-wrapper">
+						<input class="form-input" type="tel" name="user-phone" required>
+						<svg class="modal-icon">
+							<use href='./img/symbol-defs.svg#icon-phone-black-18dp'></use>
+						</svg>
+					</span>
+				</label>
+
+				<label class="form-label">Почта
+					<span class="input-wrapper">
+						<input class="form-input" type="email" name="user-email">
+						<svg class="modal-icon">
+							<use href='./img/symbol-defs.svg#icon-email-black-18dp'></use>
+						</svg>
+					</span>
+				</label>
+
+				<label class="form-label label-textarea">Комментарий
+					<textarea class="form-textarea" name="user-message" placeholder="Введите текст"></textarea>
+				</label>
+
+				<label class="checkbox">
+					<input type="checkbox" class="modal-checkbox-input" name="agreement" value="accepted" required>
+					<span class="agreement">
+						Соглашаюсь с рассылкой и принимаю<a href="">&nbsp;Условия договора</a>
+					</span>
+				</label>
+
+				<button type="submit" class="submit-button">Отправить</button>
+
+			</form>
+		</div>
+	</div>
+	<script src="./js/modal.js"></script>
+
 </body>
 <!-- вы добрались до финиша )) -->
 
