--- a/index.html
+++ b/index.html
@@ -411,9 +411,9 @@
 				</div>
 
 
-				<form action="">
-					<h3>Подпишитесь на рассылку</h3>
+				<form action="" autocomplete="off">
 					<label class="form-footer-label">
+						<h3>Подпишитесь на рассылку</h3>
 						<input class="form-footer-input" type="email" name="user-email" placeholder="E-mail">
 					</label>
 					<button class="footer-submit-button" type="submit">Подписаться</button>
@@ -435,7 +435,7 @@
 						d="M15 4.10786L13.8921 3L9.5 7.39214L5.10786 3L4 4.10786L8.39214 8.5L4 12.8921L5.10786 14L9.5 9.60786L13.8921 14L15 12.8921L10.6079 8.5L15 4.10786Z" />
 				</svg>
 			</button>
-			<form class="form" action="GET" autocomplete="off">
+			<form class="form" action="" autocomplete="off">
 				<h3>Оставьте свои данные, мы вам перезвоним</h3>
 
 				<label class="form-label">Имя
