Убрал h3 из label нельзя по инклуду

--- a/portfolio.html
+++ b/portfolio.html
@@ -292,8 +292,7 @@
 					</ul>
 				</div>
 
-
-				<form action="">
+				<form action="GET" autocomplete="off">
 					<h3>Подпишитесь на рассылку</h3>
 					<label class="form-footer-label">
 						<input class="form-footer-input" type="email" name="user-email" placeholder="E-mail">
